# 5-sem-university-

./: README.md
arch_calc_sys/lab1/: lab.asm  task.asm
arch_calc_sys/lab2/: program.asm
arch_calc_sys/lab3/: multiplication.asm  program1.asm  program2.asm  test_multiplication.py
arch_calc_sys/lab4/: task.asm  task1.asm  task2.asm  task3.asm
arch_calc_sys/lab5/: my_pow.asm  series.asm  series.py  test.c
arch_calc_sys/lab6/: multiplication  multiplication.asm  task1.asm
arch_calc_sys/lab7/: Makefile  array_ops.asm  test.cpp
arch_calc_sys/lab7/task/: Makefile  complex.cpp  complex.h  complex_asm.asm  main.cpp
arch_calc_sys/rgz/: loader.c  scripts.sh  shellcode.asm
arch_calc_sys/rgz2/: exploit  exploit.c  revshell  revshell.asm  scripts.sh
computer_graphics/lab1/: main.cpp  rotating_triangles  task.cpp
computer_graphics/lab2/: lab2  main.cpp  task  task.cpp
computer_graphics/lab3/: lab3  task  task.cpp
computer_graphics/lab4/: CMakeLists.txt  gpu_lab  lab3.cpp  lab4.cpp  main.cpp  main.py  opengl_lab3
computer_graphics/lab5/: cup3d  main.cpp
computer_graphics/rgz/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  linux_shellcode.c  main.cpp  rgz
db/lab2/: change.sql  create_database.sql
db/lab3/: 2nf.sql  3nf.sql  4nf.sql  test.sql
db/lab4/: task_1.sql  task_2.sql  task_3.sql
db/lab5/: app.py  docker-compose.yml  init.sql
db/lab6/: app.py
db/lab7/: crud.py  database.py  docker-compose.yml  main.py  models.py  schemas.py  services.py
db/lab7/templates/: base.html  (+7 more)
os/lab1/: main.c
os/lab2/: lab2.c  run_perf_tests.sh
os/lab4/: Makefile  mouse_logger.c  stress_test.sh
taify/lab1/: task2.cpp  task4.cpp  zxc.cpp
